clusters/labinfra/apps/hello.xuperson.org/src/.tekton/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tektonic
  labels:
    name: tektonic
