clusters/labinfra/apps/hello.xuperson.org/src/.tekton/trigger.yaml
apiVersion: v1
kind: Service
metadata:
  name: el-tektonic-listener
  namespace: tektonic
spec:
  ports:
  - name: http-listener
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    eventlistener: tektonic-listener
  type: LoadBalancer
  loadBalancerIP: "192.168.80.110"
