clusters/labinfra/apps/hello.xuperson.org/src/.tekton/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tektonic-app
  namespace: tektonic
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "tektonic.xuperson.org"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-set-headers: "ingress-nginx/proxy-headers"
spec:
  ingressClassName: nginx
  rules:
  - host: tektonic.xuperson.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tektonic-app
            port:
              number: 80
